fix text overflow bug

--- a/src/main/resources/static/css/question_list.css
+++ b/src/main/resources/static/css/question_list.css
@@ -117,3 +117,10 @@
     font: 15px;
     font-color: #353F79;
 }
+
+span, pre, a.title-link {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+.question-title {width:700px;}
